--- a/conf.d/nginx.conf
+++ b/conf.d/nginx.conf
@@ -1,6 +1,13 @@
+upstream go-app {
+    server go-app:8000;
+}
+
 server {
     listen 8000;
+
     location / {
-        proxy_pass http://go-app:8000;
+        proxy_pass http://go-app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
